[gd_scene load_steps=9 format=3 uid="uid://qtn1ifib34pf"]

[ext_resource type="Script" path="res://scenes/card/card.gd" id="1_fimft"]
[ext_resource type="Texture2D" uid="uid://bpca0k0mqysaf" path="res://assets/cards/chris.png" id="1_reelr"]
[ext_resource type="Texture2D" uid="uid://pd4d8wf0w0k2" path="res://assets/card.png" id="2_f06lw"]
[ext_resource type="Texture2D" uid="uid://c8v5eycnhfbdu" path="res://assets/question_mark.png" id="3_y4y0m"]
[ext_resource type="FontFile" uid="uid://d1gobefxlnffi" path="res://assets/VT323-Regular.ttf" id="5_e4tco"]
[ext_resource type="Texture2D" uid="uid://cg2xcoiindmt0" path="res://assets/crown.png" id="5_fqetr"]
[ext_resource type="Texture2D" uid="uid://c0cmegrl5i5a4" path="res://assets/checkmark.png" id="7_w8c37"]

[sub_resource type="LabelSettings" id="LabelSettings_08na1"]
font = ExtResource("5_e4tco")
font_size = 62

[node name="Card" type="TextureRect"]
texture_filter = 1
anchors_preset = -1
anchor_right = 0.431
anchor_bottom = 1.077
offset_right = 0.487976
offset_bottom = 20.9409
texture = ExtResource("1_reelr")
expand_mode = 5
stretch_mode = 4
script = ExtResource("1_fimft")
consider_texture = ExtResource("3_y4y0m")
confirmed_texture = ExtResource("7_w8c37")
win_texture = ExtResource("5_fqetr")

[node name="StatusIcon" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115
anchor_top = 0.065
anchor_right = 0.215
anchor_bottom = 0.135
offset_top = -0.300049
offset_bottom = 0.199951
expand_mode = 1

[node name="ConfirmPanel" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_left = 0.087
anchor_top = 0.067
anchor_right = 0.905
anchor_bottom = 0.926
offset_left = -0.238998
offset_top = 0.233997
offset_right = 0.215027
offset_bottom = -0.348022
mouse_filter = 2

[node name="Background" type="TextureRect" parent="ConfirmPanel"]
modulate = Color(0, 0, 0, 0.94902)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.106
anchor_top = -0.078
anchor_right = 1.116
anchor_bottom = 1.083
offset_left = 0.142002
offset_top = -0.278
offset_right = -2.21204
offset_bottom = 0.282959
mouse_filter = 2
texture = ExtResource("2_f06lw")
expand_mode = 3
stretch_mode = 4

[node name="ConfirmText" type="Label" parent="ConfirmPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.048
anchor_top = 0.031
anchor_right = 0.955
anchor_bottom = 0.969
offset_left = -0.0879993
offset_top = 0.229
offset_right = 0.019989
offset_bottom = -0.229004
text = "Add Guess
"
label_settings = SubResource("LabelSettings_08na1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
